Add a portfolio page + Create a portfolio to add the challenges + Create a sidebar for the portfolio to change between challenges

--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -12,6 +12,11 @@
   padding: 15px 18px;
 }
 
+.content-container {
+  margin-top: 50px;
+  margin-left: 165px;
+}
+
 * {
   font-family: 'Source Sans Pro';
   font-weight: 500;
