--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -3,6 +3,13 @@
 .topnav {
   background-color: #4b2e83;
   overflow: hidden;
+  position: fixed;
+  left: 0px;
+  right: 0px;
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  height: 50px;
+
 }
 
 /* Style the links inside the navigation bar */
