--- a/src/pages/Challenges.css
+++ b/src/pages/Challenges.css
@@ -4,10 +4,12 @@
   margin-top: 50px;
   text-align: justify;
   line-height: 1.75rem;
+  max-width: 770px;
 }
 
 .challenge-image {
-  padding: 2% 0;
+  padding-bottom: 2%;
+  padding-top: 5px;
   display: block;
 }
 
@@ -25,4 +27,10 @@
 
 strong {
   font-weight: 700;
+}
+
+.image-title {
+  display: block;
+  font-size: 18px !important;
+  padding-top: 5px;
 }
