--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -9,7 +9,6 @@
   z-index: 1; /* Stay on top */
   top: 0; /* Stay at the top */
   height: 50px;
-
 }
 
 /* Style the links inside the navigation bar */
@@ -25,7 +24,7 @@
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #e8e3d3 ;
+  background-color: #e8e3d3;
   color: #4b2e83;
   font-weight: 700;
 }
@@ -44,7 +43,9 @@
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
+  .topnav a:not(:first-child) {
+    display: none;
+  }
   .topnav a.icon {
     float: right;
     display: block;
@@ -53,7 +54,9 @@
 
 /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
 @media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+    position: relative;
+  }
   .topnav.responsive a.icon {
     position: absolute;
     right: 0;
